<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">npz</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">log in</string>
    <string name="sign_up">sign up</string>
    <string name="email">email</string>
    <string name="login_err">login error - right username/password?</string>
    <string name="sign_up_err">sign up error</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="send_a_nipple">send a nip</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_splash">SplashActivity</string>

</resources>